<resources>
    <string name="app_name">Smart Order</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="seleccione_uno">Seleccione Uno</string>
    <string name="Iniciarsesion">Iniciar sesion</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="unete">Unirse</string>
    <string name="sharebutt">Compartir</string>
    <string name="share">Si te gusta nuestra app comparte con tus amigos.</string>
    <string name="email">Correo</string>
    <string name="alunirse">Al unirse acepta los terminos y la politica de privacidad.</string>
    <string name="passwordconfirmation">Confirmar contraseña</string>
    <string name="yatienescuenta">Ya tienes una cuenta?</string>
    <string name="notienescuenta">No tienes cuenta? </string>
    <string name="daise">Los Daisies son un tipo de coctel propio de la epoca estival, hechos a base de limon, granadina y como bebida base brandi, ron o ginebra. </string>
    <string name="registrarse">Registrarse</string>
    <string name="ofertas">Ofertas</string>
    <string name="featured">Destacados</string>
    <string name="nightmode">Cambiar tema</string>
    <string name="daymode">Modo dia</string>
    <string name="changelang">Cambiar idioma</string>
    <string name="Special">Especial del dia</string>
    <string name="Coolers">Los Cocteles, son long drinks preparados con licor o destilado, bebida carbonatada (Ginger Ale, Sidra o Chanpagne).</string>
    <string name="contacto">Contacto</string>
    <string name="longdrinksDescr">Se sirve con vaso largo y estan preparadas con jugo de frutas, bebidas espumosas, aguas gasiosas y hielo.</string>
    <string name="acercade">Acerca de nosotros</string>
    <string name="Configuracion">Configuracion</string>
    <string name="Acercadenosotros">Somos un grupo de programadores con el objetivo de optimizar una metodologia de comercio tal como lo es un restaurante, optimizar la forma de pedidos del cliente haciendo uso de la tecnologia de los smartphones hoy en dia.</string>
    <string name="registrateaqui">Registrate aqui</string>
    <string name="enviaremail">Enviar email</string>
    <string name="Contactanos">Contactanos</string>
    <string name="Estamosdispo">Estamos disponibles las 24 horas.</string>
    <string name="yatienescuentabutton"> Ingresa aqui.</string>
    <string name="food">Comidas</string>
    <string name="drinks">Bebidas</string>
    <string name="desserts">Postres</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>