<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/acercade"
    android:title="@string/acercade"
    />
    <item
        android:id="@+id/contacto"
        android:title="@string/contacto"
        />


    <item
        android:id="@+id/atras"
        android:title="back"
        android:icon="@drawable/back"
        app:showAsAction="always"/>

    <item
        android:id="@+id/orden"
        android:title="Orden"
        android:icon="@drawable/ordenn"
        app:showAsAction="always"/>

    <item
        android:id="@+id/configuracion"
        android:title="@string/Configuracion"
        android:icon="@drawable/ic_baseline_settings_24"
        />
</menu>