<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrar">

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="668dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492">


        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:textAlignment="center"
            android:textSize="30dp" />
        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="27dp" />
        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yatienescuenta"
            android:textAlignment="center"
            android:textSize="18dp" />
        <TextView
            android:id="@+id/ingresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yatienescuentabutton"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:clickable="true"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="30dp" />
        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unete"
            android:textAlignment="center"
            android:textSize="25dp" />
        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""

             />
        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />
        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordconfirmation"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/passconfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />
        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="25dp" />

        <Button
            android:id="@+id/iniciar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:onClick="registrarUsuario"
            android:text="@string/registrarse" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="30dp" />
        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alunirse"
            android:textAlignment="center"
            android:textSize="15dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>