<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contacto">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Estamosdispo"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.28" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="267dp"
            android:layout_height="62dp"
            android:text="@string/share"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.569"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.593" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="328dp"
            android:layout_height="612dp"
            android:text="@string/Contactanos"
            android:textAlignment="center"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.63" />

        <Button
            android:id="@+id/buttonemail"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="215dp"
            android:layout_height="56dp"
            android:text="@string/enviaremail"
            android:textColor="#2980B9"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.367"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13"
            app:layout_constraintVertical_bias="0.359" />

        <Button
            android:id="@+id/buttonwhatscomp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="215dp"
            android:layout_height="56dp"
            android:text="@string/sharebutt"
            android:textColor="#28B463"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.367"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13"
            app:layout_constraintVertical_bias="0.764" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>