<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/postof3"
        style="@android:style/Widget.ImageButton"
        android:layout_width="211dp"
        android:layout_height="152dp"
        android:backgroundTint="#FFFFFF"
        android:scaleType="centerInside"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.786"
        app:srcCompat="@drawable/bebida3"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/postof2"
        style="@android:style/Widget.ImageButton"
        android:layout_width="211dp"
        android:layout_height="152dp"
        android:backgroundTint="#FFFFFF"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/bebida2"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/postof1"
        style="@android:style/Widget.ImageButton"
        android:layout_width="211dp"
        android:layout_height="152dp"
        android:backgroundTint="#FFFFFF"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203"
        app:srcCompat="@drawable/bebida1"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:fontFamily="serif"
        android:text="@string/Special"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="134dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:text="Long Drinks"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="134dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:text="Cocteles Coolers"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="134dp"
        android:layout_height="23dp"
        android:text="Daisies"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="149dp"
        android:layout_height="97dp"
        android:fontFamily="serif"
        android:text="@string/longdrinksDescr"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="149dp"
        android:layout_height="97dp"
        android:fontFamily="serif"
        android:text="@string/Coolers"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="153dp"
        android:layout_height="121dp"
        android:fontFamily="serif"
        android:text="@string/daise"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.798" />


</androidx.constraintlayout.widget.ConstraintLayout>